# ValueChain

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml
config/: filing_sources_2026.yaml  global_sources_base.yaml  ontology.yaml  source_registry.yaml
config/curated_markets/: japan.csv  korea.csv
data/universe/: ai_infra_universe.csv
db/: acquisition_schema.sql  schema.sql
deploy/cloudflare/: fintelligence.yml
docs/: ACQUISITION_MONITORING.md  CNINFO_DATA_QUALITY_AUDIT_2026-07-14.md  DISCLOSURE_SOURCE_ACCESS_MATRIX.md  UNIFIED_DISCLOSURE_API.md  acquisition_file_api.md  acquisition_operations.md  company_dependency_brief.md  cosmos_deployment.md  extraction_prompt_notes.md  filing_download_plan_2026.md  financial_ie_benchmark_2026-07-15.md  financial_ie_pilot.md  global_strategic_universe.md  global_universe_acquisition.md  methodology.md  multilingual_financial_ie_experiment.md  source_curator_instruction.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: generate_company_dependency_brief.py  rebuild_run_from_raw.py  run_financial_ie_benchmark.py  run_financial_ie_pilot.py  run_industry_hybrid_40_3f.sh  run_industry_llm_prompt_v2.sh  run_multilingual_financial_ie_experiment.py  sync_company_briefs_to_frontend.py
src/gcu/: config.py  (+6 more)
templates/: dashboard.html.j2  index.html.j2
tests/: test_acquisition_api.py  test_acquisition_monitor.py  test_acquisition_resolver_api.py  test_acquisition_schedule.py  test_acquisition_schema.py  test_acquisition_schema_lock.py  test_acquisition_state.py  test_acquisition_worker.py  test_ad_hoc_worker.py  test_aggregation.py  test_api.py  test_async_http.py  test_companies_house_bulk_acquisition.py  test_company_dependency_brief.py  test_config.py  test_curated_universe.py  test_cvm_bulk_acquisition.py  test_dashboard.py  test_disclosure_resolver.py  test_disclosure_schema.py  test_edge_quality.py  test_edinet_acquisition.py  test_embeddings.py  test_filing_parser.py  test_filing_source_registry.py  test_gcu_config.py  test_gleif.py  test_global_acquisition.py  test_global_universe_store.py  test_llm_client.py  test_official_disclosure_import.py  test_opendart_acquisition.py  test_pipeline_outputs.py  test_planning.py  test_proxy_pool.py  test_relation_llm.py  test_relation_rules.py  test_relevance.py  test_run_registry.py  test_sec_acquisition.py  (+4 more)
(+204 files in other folders)
