[project]
name = "ai-valuechain-prototype"
version = "0.1.0"
description = "Prototype pipeline for disclosure-derived AI value chain dependency graphs."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "numpy>=1.26",
  "pandas>=2.0",
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "uvicorn[standard]>=0.30",
  "yfinance>=0.2",
]

[project.scripts]
valuechain = "valuechain.cli:main"
valuechain-api = "valuechain.api:main"
valuechain-acquire = "valuechain.acquisition_cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
