[project]
name = "ai-valuechain-prototype"
version = "0.1.0"
description = "Prototype pipeline for disclosure-derived AI value chain dependency graphs."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.0",
  "psycopg[binary]>=3.2",
  "psycopg-pool>=3.2",
  "pypdf>=5.0",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "requests>=2.31",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
  "xlrd>=2.0",
  "yfinance>=0.2",
]

[project.scripts]
valuechain = "valuechain.cli:main"
valuechain-api = "valuechain.api:main"
valuechain-acquire = "valuechain.acquisition_cli:main"
valuechain-global = "gcu_priority_markets.cli:app"
valuechain-global-acquire = "valuechain.global_acquisition_cli:main"
valuechain-monitor = "valuechain.acquisition_monitor_cli:main"
valuechain-ad-hoc-worker = "valuechain.ad_hoc_worker:main"

[project.optional-dependencies]
browser = ["playwright>=1.50"]

[tool.setuptools.package-data]
gcu_priority_markets = ["catalog/*.yaml", "catalog/*.csv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
